# editor-ai

./: BUILD_INFO.json  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  README.md  VALIDATION_REPORT.md  check_install.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
assets/fonts/: README.txt
assets/music/: README.txt
assets/overlays/: README.txt
assets/watermarks/: README.txt
docs/: ARCHITECTURE.md  FREE_HOSTING.md  SCORING.md
editai/: __main__.py
editai/analysis/: audio.py  candidates.py  diversity.py  pipeline.py  report.py  sampling.py  scenes.py  scoring.py  visual.py
editai/api/: transcription.py
editai/bot/: application.py  helpers.py
editai/cli/: analyze.py  doctor.py  main.py  render.py
editai/core/: config.py  constants.py  errors.py  logging.py  security.py
editai/database/: database.py  schema.py
editai/domain/: enums.py  models.py  profiles.py
editai/editing/: filtergraph.py  manifest.py  music.py  pipeline.py  renderer.py  subtitles.py
editai/ingestion/: router.py  telegram.py  url.py
editai/media/: ffmpeg.py  probe.py  process.py  validation.py
editai/services/: cleanup.py  health.py  job_pipeline.py  publisher.py  queue.py  (+1 more)
scripts/: run_linux.sh  run_termux.sh  smoke_test.py
tests/: test_candidates.py  test_database.py  test_diversity.py  test_filtergraph.py  test_health.py  test_jsonio.py  test_manifest.py  test_math.py  test_music.py  test_profiles.py  test_rate_limit.py  test_scene_density.py  test_scoring.py  test_security.py  test_subtitles.py  test_timecode.py  test_user_settings.py
(+39 files in other folders)
