[project]
name = "editai-ultimate-free"
version = "1.0.0"
description = "Free Telegram bot for automatic highlight detection and vertical video editing"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
